--- a/setup.cfg
+++ b/setup.cfg
@@ -8,31 +8,44 @@ universal = 1
 
 
 [flake8]
-max-complexity = 6
-statistics = true
-max-line-length = 80
+# Base flake8 configuration:
+statistics = False
 doctests = True
+show-source = True
+enable-extensions = G
 
-# Flake plugins:
-inline-quotes = single
+# Plugins:
 accept-encodings = utf-8
+max-complexity = 6
+max-line-length = 80
+isort-show-traceback = True
 
+# Self settings:
+max-imports = 13
+
+# Excluding some directories:
+exclude =
+  .git
+  __pycache__
+  .venv
+  .eggs
+  *.egg
+
+# Exclude some pydoctest checks globally:
+ignore = D100, D104, D401, W504, RST303, RST304
+
+per-file-ignores =
+    tests/*.py: S101
 
 [tool:pytest]
-flake8-ignore =
-  tests/*.py D101 D103 D107
-  # Disable some pydocstyle checks:
-  *.py D100 D104 D106 D401
-
 # py.test options:
 norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
 
 addopts =
   --strict
   --doctest-modules
-  --flake8
-  --isort
   --cov=final_class
+  --cov-branch
   --cov-report=term:skip-covered
   --cov-report=html
   --cov-fail-under=100
@@ -44,3 +57,20 @@ multi_line_output = 3
 include_trailing_comma = true
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 default_section = FIRSTPARTY
+
+
+[mypy]
+# The mypy configurations: http://bit.ly/2zEl9WI
+python_version = 3.6
+
+disallow_any_explicit = True
+# disallow_any_generics = True
+check_untyped_defs = True
+disallow_untyped_calls = True
+ignore_errors = False
+ignore_missing_imports = True
+strict_optional = True
+warn_unused_ignores = True
+warn_redundant_casts = True
+warn_unused_configs = True
+warn_unreachable = True
