--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: python
+dist: xenial
 
 python:
   - 3.6
-  # - 3.7
+  - 3.7
 
 install:
   - pip install poetry
@@ -10,8 +11,12 @@ install:
   - poetry develop
 
 script:
+  - poetry run flake8 .
   - poetry run pytest
   - poetry run mypy final_class.py
+  - poetry check
+  - poetry run pip check
+  - poetry run safety check --bare --full-report
 
 notifications:
   email:
