--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ script:
   - poetry run pip check
   - poetry run safety check --bare --full-report
 
+after_success:
+  - pip install coveralls
+  - coveralls
+
 notifications:
   email:
     on_success: never
