--- a/setup.cfg
+++ b/setup.cfg
@@ -19,9 +19,7 @@ accept-encodings = utf-8
 max-complexity = 6
 max-line-length = 80
 isort-show-traceback = True
-
-# Self settings:
-max-imports = 13
+i-control-code = False
 
 # Excluding some directories:
 exclude =
