--- a/setup.cfg
+++ b/setup.cfg
@@ -3,22 +3,28 @@
 # https://docs.python.org/3/distutils/configfile.html
 
 
-[bdist_wheel]
-universal = 1
-
-
 [flake8]
 # Base flake8 configuration:
+# https://flake8.pycqa.org/en/latest/user/configuration.html
+format = wemake
+show-source = True
 statistics = False
 doctests = True
-show-source = True
 enable-extensions = G
 
 # Plugins:
 accept-encodings = utf-8
 max-complexity = 6
 max-line-length = 80
-isort-show-traceback = True
+radon-max-cc = 10
+radon-show-closures = True
+radon-no-assert = True
+
+# Disable some pydocstyle checks:
+# Exclude some pydoctest checks globally:
+ignore = D100, D104, D106, D401, W504, X100, RST303, RST304
+
+# Custom:
 i-control-code = False
 
 # Excluding some directories:
@@ -28,9 +34,6 @@ exclude =
   .venv
   .eggs
   *.egg
-
-# Exclude some pydoctest checks globally:
-ignore = D100, D104, D401, W504, RST303, RST304
 
 per-file-ignores =
     tests/*.py: S101
@@ -55,20 +58,27 @@ multi_line_output = 3
 include_trailing_comma = true
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 default_section = FIRSTPARTY
+# Should be: 80 - 1
+line_length = 79
 
 
 [mypy]
 # The mypy configurations: http://bit.ly/2zEl9WI
 python_version = 3.6
 
+check_untyped_defs = True
 disallow_any_explicit = True
 # disallow_any_generics = True
-check_untyped_defs = True
 disallow_untyped_calls = True
+disallow_untyped_decorators = True
 ignore_errors = False
 ignore_missing_imports = True
+implicit_reexport = False
 strict_optional = True
+strict_equality = True
+no_implicit_optional = True
 warn_unused_ignores = True
 warn_redundant_casts = True
 warn_unused_configs = True
 warn_unreachable = True
+warn_no_return = True
