--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,10 @@
+[tool.nitpick]
+style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
+
+
 [tool.poetry]
 name = "final-class"
-version = "0.1.3"
+version = "0.2.0"
 description = "Final classes for Python 3"
 authors = ["sobolevn <mail@sobolevn.me>"]
 license = "MIT"
@@ -25,14 +29,17 @@ python = "^3.6"
 typing_extensions = "^3.7"
 
 [tool.poetry.dev-dependencies]
+pytest = "^5.1"
 pytest-randomly = "^3.1"
 pytest-cov = "^2.5"
 
-wemake-python-styleguide = "^0.10"
+wemake-python-styleguide = "^0.12.4"
 flake8-pytest = "^1.3"
+flake8-pytest-style = "^0.1.3"
 
 mypy = "^0.720"
 safety = "^1.8"
+flake8-pyi = "^19.3"
 
 
 [build-system]
