--- a/setup.cfg
+++ b/setup.cfg
@@ -66,6 +66,7 @@ line_length = 79
 # The mypy configurations: http://bit.ly/2zEl9WI
 python_version = 3.6
 
+allow_redefinition = False
 check_untyped_defs = True
 disallow_any_explicit = True
 # disallow_any_generics = True
