--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,10 +36,11 @@ pytest-cov = "^2.5"
 wemake-python-styleguide = "^0.12.4"
 flake8-pytest = "^1.3"
 flake8-pytest-style = "^0.1.3"
+flake8-pyi = "^19.3"
+nitpick = "^0.21.0"
 
 mypy = "^0.720"
 safety = "^1.8"
-flake8-pyi = "^19.3"
 
 
 [build-system]
