--- a/.editorconfig
+++ b/.editorconfig
@@ -8,4 +8,7 @@ trim_trailing_whitespace = true
 end_of_line = lf
 indent_style = space
 insert_final_newline = true
+indent_size = 2
+
+[*.py]
 indent_size = 4
