--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ typing_extensions = "^3.7"
 pytest = "^5.3"
 pytest-randomly = "^3.1"
 pytest-cov = "^2.8"
+pytest-mypy-plugins = "^1.1"
 
 wemake-python-styleguide = "^0.13.1"
 flake8-pytest = "^1.3"
