--- a/setup.cfg
+++ b/setup.cfg
@@ -10,15 +10,10 @@ format = wemake
 show-source = True
 statistics = False
 doctests = True
-enable-extensions = G
 
 # Plugins:
-accept-encodings = utf-8
 max-complexity = 6
 max-line-length = 80
-radon-max-cc = 10
-radon-show-closures = True
-radon-no-assert = True
 
 # Disable some pydocstyle checks:
 # Exclude some pydoctest checks globally:
@@ -46,8 +41,7 @@ include_trailing_comma = true
 # See https://github.com/timothycrosley/isort#multi-line-output-modes
 multi_line_output = 3
 default_section = FIRSTPARTY
-# Should be: 80 - 1
-line_length = 79
+line_length = 80
 
 
 [darglint]
@@ -73,12 +67,10 @@ addopts =
 
 [mypy]
 # The mypy configurations: http://bit.ly/2zEl9WI
-python_version = 3.6
-
 allow_redefinition = False
 check_untyped_defs = True
 disallow_any_explicit = True
-# disallow_any_generics = True
+disallow_any_generics = True
 disallow_untyped_calls = True
 disallow_untyped_decorators = True
 ignore_errors = False
