Switching to Github Actions

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,7 @@ addopts =
   --cov-branch
   --cov-report=term:skip-covered
   --cov-report=html
+  --cov-report=xml
   --cov-fail-under=100
   --mypy-ini-file=setup.cfg
 
