--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+
 [tool.nitpick]
 style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
 
@@ -36,15 +41,9 @@ pytest-cov = "^2.10"
 pytest-mypy-plugins = "^1.6"
 
 wemake-python-styleguide = "^0.14"
-flake8-pytest = "^1.3"
-flake8-pytest-style = "^1.3.0"
+flake8-pytest-style = "^1.3"
 flake8-pyi = "^20.10"
-nitpick = "^0.23.1"
+nitpick = "^0.23"
 
 mypy = "^0.790"
 safety = "^1.10"
-
-
-[build-system]
-requires = ["poetry>=1.0"]
-build-backend = "poetry.masonry.api"
