--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,11 @@ show-source = True
 statistics = False
 doctests = True
 
+# darglint configuration:
+# https://github.com/terrencepreilly/darglint
+strictness = long
+docstring-style = numpy
+
 # Plugins:
 max-complexity = 6
 max-line-length = 80
@@ -31,7 +36,7 @@ exclude =
   *.egg
 
 per-file-ignores =
-    tests/*.py: S101
+  tests/*.py: S101
 
 
 [isort]
@@ -41,14 +46,7 @@ include_trailing_comma = true
 use_parentheses = true
 # See https://github.com/timothycrosley/isort#multi-line-output-modes
 multi_line_output = 3
-default_section = FIRSTPARTY
 line_length = 80
-
-
-[darglint]
-# darglint configuration:
-# https://github.com/terrencepreilly/darglint
-strictness = long
 
 
 [tool:pytest]
@@ -56,7 +54,8 @@ strictness = long
 norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
 
 addopts =
-  --strict
+  --strict-config
+  --strict-markers
   --doctest-modules
   --cov=final_class
   --cov-branch
